-------------------------------------------------------------------------------

$Id$

vim: spelllang=en spell

-------------------------------------------------------------------------------

Changes since 1.4.0:

* Added a userspace library for accessing the application interface. This
  library is licensed under LGPLv2.
* Added distributed clocks support.
* Added VoE mailbox protocol support.
* Separated datagram initialization from filling the payload with zeros.
  Introduced new method ec_datagram_zero() for that.
* Added phy_read and phy_write commands to ethercat tool.
* Added e100 driver for Intel PRO/100 NICs.
    - Added e100 driver for 2.6.28, thanks to Kim. H. Madsen.
* Added 8139too driver for kernels 2.6.25 (F. Pose), 2.6.26 (M. Luescher),
  2.6.27, 2.6.28 and 2.6.29 (M. Goetze).
* Added e1000 driver for 2.6.26 (M. Luescher).
* Added r8169 driver for 2.6.24 and 2.6.28.
* Debug interfaces are created with the Ethernet addresses of the attached
  physical device.
* Improved error case return codes of many functions.
* Implemented the File Access over EtherCAT (FoE) mailbox protocol, thanks to
  O. Zarges.
* Going to the Bootstrap state is now supported by the state machines and the
  command-line tool.
* Added ecrt_open_master() and ecrt_master_reserve() separation for
  the userspace libary (thanks to Martin Troxler).
* Added ecrt_master() userspace interface, to get information about a
  master (thanks to Martin Troxler).
* Introduced ecrt_master_slave() to get information about a certain slave.
* Fixed SDO upload segment response (thanks to Christoph Peter).
* SDO entry access rights are shown in 'ethercat sdos'.
* Added 64-bit data access macros to application header.
* Added debug level for all masters as a module parameter. Thanks to Erwin
  Burgstaller.
* Clear slave list on link down.
* Output device link state in 'ethercat master'.
* Added 'ethercat graph' command which outputs the bus topology in
  DOT language.