@@ -12,6 +12,10 @@ Changes since 1.4.0:
   library is licensed under LGPLv2.
 * Added distributed clocks support.
 * Added VoE mailbox protocol support.
+* Improved the callback mechanism. ecrt_master_callbacks() now takes two
+  callback functions for sending and receiving datagrams.
+  ecrt_master_send_ext() is used to execute the sending of non-application
+  datagrams.
 * Separated datagram initialization from filling the payload with zeros.
   Introduced new method ec_datagram_zero() for that.
 * Added phy_read and phy_write commands to ethercat tool.
